# hexyl

./: .gitignore  .gitpod.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  hexyl_0.7.0_amd64.snap  tarpaulin-run-2020-11-02T16:18:58.235271288+01:00.json
.github/workflows/: CICD.yml
ci/: before_deploy.bash
doc/: hexyl.1.md  sponsors.md
examples/: ascii.rs  ebcdic.rs  simple.rs
snap/: snapcraft.yaml
src/: border.rs  build.rs  cli.rs  colors.rs  input.rs  lib.rs  lookup.rs  main.rs  squeezer.rs  tests.rs
src/formats/: ascii.rs  ebcdic.rs  mod.rs
src/themes/: hexylamine.rs  mod.rs
testdata/: test.txt  wiki.txt
tests/: integration_tests.rs  lib_test.rs  squeezer_test.rs
tests/examples/: .gitattributes  ascii  hello_world_elf64
