[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A command-line hex viewer"
homepage = "https://github.com/sharkdp/hexyl"
license = "MIT/Apache-2.0"
name = "hexyl"
readme = "README.md"
repository = "https://github.com/sharkdp/hexyl"
version = "0.10.0"
edition = "2021"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
atty = "0.2"
const_format = "0.2"
libc = "0.2"
thiserror = "1.0"
terminal_size = "0.2"

[dependencies.clap]
version = "3"
default-features = false
features = ["std", "suggestions", "color", "wrap_help", "cargo"]

[dev-dependencies]
assert_cmd = "2.1"
predicates = "2.0"

[profile.release]
lto = true
codegen-units = 1
